Se agrega archivo yml

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,8 +30,8 @@ http {
 
         #locations
 
-        location /productos {
-            proxy_pass http://productos:5000/productos;
+        location /suma {
+            proxy_pass http://suma:5000/suma;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -39,8 +39,8 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        location /clientes {
-            proxy_pass http://clientes:5000/clientes;
+        location /resta {
+            proxy_pass http://resta:5000/resta;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
@@ -48,8 +48,17 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        location /facturas {
-            proxy_pass http://facturas:5000/facturas;
+        location /multiplicacion {
+            proxy_pass http://multiplicacion:5000/multiplicacion;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+
+        location /division {
+            proxy_pass http://division:5000/division;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
