--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,21 @@ services:
             - ./nginx.conf:/etc/nginx/nginx.conf:ro
         command: [nginx-debug, '-g', 'daemon off;']
         links:
-            - productos
-            - clientes
-            - facturas
-            
+            - suma
+            - resta
+            - multiplicacion
+            - division
         ports:
-            - "8081:80"
-              
-    productos:
-        build: ./productos
+            - "8080:80"
+        
+    suma:
+        build: ./suma
 
-    clientes:
-        build: ./clientes
-    
-    facturas:
-        build: ./facturas
+    resta:
+        build: ./resta
+
+    multiplicacion:
+        build: ./multiplicacion
+
+    division:
+        build: ./division
