--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,21 +6,18 @@ services:
             - ./nginx.conf:/etc/nginx/nginx.conf:ro
         command: [nginx-debug, '-g', 'daemon off;']
         links:
-            - suma
-            - resta
-            - multiplicacion
-            - division
+            - productos
+            - clientes
+            - facturas
+            
         ports:
-            - "8080:80"
-        
-    suma:
-        build: ./suma
+            - "8081:80"
+              
+    productos:
+        build: ./productos
 
-    resta:
-        build: ./resta
-
-    multiplicacion:
-        build: ./multiplicacion
-
-    division:
-        build: ./division
+    clientes:
+        build: ./clientes
+    
+    facturas:
+        build: ./facturas
