--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,22 @@ jobs:
     steps:
       # Step 1: obtain repo from GitHub
       - checkout
+
+      - run:
+          name: Install Docker Compose
+          command: |
+            set -x
+            curl -L https://github.com/docker/compose/releases/download/1.11.2/docker-compose-`uname -s`-`uname -m` > /usr/local/bin/docker-compose
+            chmod +x /usr/local/bin/docker-compose
+
+      - run:
+          name: Start container and verify it's working
+          command: |
+            set -x
+            docker-compose up -d
+            # docker-compose will start 2 containers, the one with service will be named `contacts`
+            # we start another container with curl in the same network as `contacts`, this way we have
+            # all exposed ports from `contacts` available on `localhost` in this new container  
       # Step 2: create virtual env and install dependencies
       - run:
           name: install dependencies
