--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,7 +17,7 @@ jobs:
             sudo mv ~/docker-compose /usr/local/bin/docker-compose
       - run: 
           name: build docker-compose
-          command: docker-compose build
+          command: sudo docker-compose build
 
       - run:
           name: Start container and verify it's working
