--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,31 +1,21 @@
-# Python CircleCI 2.0 configuration file
-version: 2
-jobs:
-  build:
-    docker:
-      - image: circleci/python:3.5
-    working_directory: ~/repo
-    steps:
-      # Step 1: obtain repo from GitHub
-      - checkout
-      # Step 2: create virtual env and install dependencies
-      - run:
-          name: install dependencies
-          command: |
-            python3 -m venv venv
-            . venv/bin/activate
-            pip install --upgrade pip
-            pip install -r requirements.txt
-      # Step 3: pytest
-      - run:
-          name: run test
-          command: |
-            . venv/bin/activate
-            pytest
-      # Step 4: behave test
-      - run:
-          name: behave test
-          command: |
-            . venv/bin/activate
-            behave
+version: 2.1
 
+orbs:
+  python: circleci/python@0.2.1
+
+jobs:
+  build-and-test:
+    executor: python/default
+    steps:
+      - checkout
+      - python/load-cache
+      - python/install-deps
+      - python/save-cache
+      - run:
+          command: ./manage.py test
+          name: Test
+
+workflows:
+  main:
+    jobs:
+      - build-and-test
