--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     nginx:
         image: nginx:alpine
         volumes:
-            - ./nginx.conf:/etc/nginx/nginx.conf:ro
+            - ./nginx.conf:/etc/nginx
         command: [nginx-debug, '-g', 'daemon off;']
         links:
             - productos
