--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,8 @@
 # Python CircleCI 2.0 configuration file
 version: 2
-jobs:
-  build:
-    docker:
-      - image: circleci/python:3.5
-    working_directory: ~/repo
+    commands:
+      check-code-quality:
+        description: Check Code Quality
     parameters:
         sonar_server_url:
             type: string
@@ -17,13 +15,9 @@ jobs:
         sonar_sources:
             description: "Where the files are located?"
             type: string
-            default: "$SONAR_SOURCES"
-    steps:
-      # Step 1: obtain repo from GitHub
-      - checkout
-      - setup_remote_docker
-
-      - run:
+            default: "$SONAR_SOURCES"  
+    steps:        
+    - run:
         name: Install Sonarqube scanner
         command: |
             wget https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.2.0.1873.zip
@@ -35,7 +29,20 @@ jobs:
             export SONAR_SCANNER_OPTS="-Xmx2048m"
             eval ./sonar-scanner-4.2.0.1873/bin/sonar-scanner -Dsonar.host.url=<< parameters.sonar_server_url >> \
             -Dsonar.sources=<< parameters.sonar_sources >> \
-            -Dsonar.login=<< parameters.sonar_login >>
+            -Dsonar.login=<< parameters.sonar_login >>        
+            
+
+jobs:
+  build:
+    docker:
+      - image: circleci/python:3.5
+    working_directory: ~/repo
+
+    steps:
+      # Step 1: obtain repo from GitHub
+      - checkout
+      - setup_remote_docker
+
       - run:
           name: Install Docker client
           command: |
